--- a/.travis.yaml
+++ b/.travis.yaml
@@ -16,10 +16,6 @@ matrix:
     - name: macOS
       os: osx
       language: generic
-env:
-  global:
-    - TWINE_USERNAME=hledoux
-    # Note: TWINE_PASSWORD is set in Travis settings.
 
 script:
   - "pip install cibuildwheel==0.10.2 setuptools-rust==0.10.3"
@@ -27,15 +23,5 @@ script:
   - export CIBW_BEFORE_BUILD="pip install setuptools-rust==0.10.3 && source ./scripts/travis"
   - export CIBW_SKIP=cp34-*\ $CIBW_SKIP
   - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
-  - export CIBW_TEST_COMMAND="python -c 'import autopy'"
-  - git fetch --unshallow
+  - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
   - cibuildwheel --output-dir wheelhouse
-  - |
-    if [[ ! -z "$TRAVIS_TAG" ]]; then
-      pip install twine
-      python -m twine upload wheelhouse/*.whl
-    elif [[ "$TRAVIS_BRANCH" = "master" ]] && [[ -z "$TRAVIS_PULL_REQUEST_SHA" ]]; then
-      export TWINE_PASSWORD="$TWINE_TEST_PASSWORD"
-      pip install twine
-      python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/
-    fi
