--- a/.travis.yml
+++ b/.travis.yml
@@ -7,21 +7,17 @@ matrix:
         - docker
       env:
         - CIBW_SKIP=*manylinux1_i686*
-    - name: Linux 32-bit
-      sudo: required
-      services:
-        - docker
-      env:
-        - CIBW_SKIP=*manylinux1_x86_64*
+        - CIBW_BUILD:cp3?-*
     - name: macOS
       os: osx
       language: generic
+      env:
+        - CIBW_BUILD:cp3?-*
 
 script:
   - "pip install cibuildwheel==0.10.2 setuptools-rust==0.10.3"
   - export RUST_BACKTRACE=1
   - export CIBW_BEFORE_BUILD="pip install setuptools-rust==0.10.3 && source ./scripts/travis"
-  - export CIBW_SKIP=cp34-*\ $CIBW_SKIP
   - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
   - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
   - cibuildwheel --output-dir wheelhouse
