--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ crate-type = ["cdylib"]
 
 [dependencies.pyo3]
 version = "0.7.0"
-features = ["extension-module"]
+default-features = false
+# features = ["extension-module"]
