--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - "pip install cibuildwheel==0.10.2 setuptools-rust==0.10.3"
   - export RUST_BACKTRACE=1
   - export CIBW_BEFORE_BUILD="pip install setuptools-rust==0.10.3 && source ./scripts/travis"
+  - export CIBW_SKIP=cp34-*\ $CIBW_SKIP
   - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
   - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
   - cibuildwheel --output-dir wheelhouse
