--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ matrix:
       language: generic
       env:
         - CIBW_BUILD:cp3?-*
-
+env:
+  global:
+    - TWINE_USERNAME=hledoux
+    # Note: TWINE_PASSWORD is set in Travis settings.
 script:
   - "pip install cibuildwheel==0.10.2 setuptools-rust==0.10.3"
   - export RUST_BACKTRACE=1
@@ -22,3 +25,9 @@ script:
   - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
   - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
   - cibuildwheel --output-dir wheelhouse
+  - |
+    if [[ $TRAVIS_TAG ]]; then
+      export TWINE_PASSWORD="$TWINE_PASSWORD"
+      python -m pip install twine
+      python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/
+    fi
