--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+branches:
+  only:
+  - master
 matrix:
   include:
     - name: Linux 64-bit
@@ -25,9 +28,6 @@ script:
   - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
   - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
   - cibuildwheel --output-dir wheelhouse
-  - |
-    if [[ $TRAVIS_TAG ]]; then
-      export TWINE_PASSWORD="$TWINE_PASSWORD"
-      python -m pip install twine
-      python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/
-    fi
+  - export TWINE_PASSWORD="$TWINE_PASSWORD"
+  - python -m pip install twine
+  - python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/
