--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ script:
   - cibuildwheel --output-dir wheelhouse
   - export TWINE_PASSWORD="$TWINE_PASSWORD"
   - python -m pip install twine
-  - python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/
+  - python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/ --verbose
