--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,15 @@ env:
     - TWINE_USERNAME=hledoux
     # Note: TWINE_PASSWORD is set in Travis settings.
 script:
-  - "pip install cibuildwheel==0.10.2 setuptools-rust==0.10.3"
-  - export RUST_BACKTRACE=1
-  - export CIBW_BEFORE_BUILD="pip install setuptools-rust==0.10.3 && source ./scripts/travis"
-  - export CIBW_SKIP=cp34-*\ $CIBW_SKIP
-  - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
-  - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
-  - cibuildwheel --output-dir wheelhouse
-  - export TWINE_PASSWORD="$TWINE_PASSWORD"
-  - python -m pip install twine
-  - python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/ --verbose
+  - echo $TWINE_USERNAME
+  - echo $TWINE_PASSWORD
+  # - "pip install cibuildwheel==0.10.2 setuptools-rust==0.10.3"
+  # - export RUST_BACKTRACE=1
+  # - export CIBW_BEFORE_BUILD="pip install setuptools-rust==0.10.3 && source ./scripts/travis"
+  # - export CIBW_SKIP=cp34-*\ $CIBW_SKIP
+  # - export CIBW_ENVIRONMENT="CI=\"$CI\" TRAVIS_BRANCH=\"$TRAVIS_BRANCH\" TRAVIS_COMMIT=\"$TRAVIS_COMMIT\" PATH=\"\$HOME/.cargo/bin:\$PATH\""
+  # - export CIBW_TEST_COMMAND="python -c 'import stringsum'"
+  # - cibuildwheel --output-dir wheelhouse
+  # - export TWINE_PASSWORD="$TWINE_PASSWORD"
+  # - python -m pip install twine
+  # - python -m twine upload wheelhouse/*.whl --repository-url https://test.pypi.org/legacy/ --verbose
